Fixes #1223 - Alert should use word-wrap: break-word

--- a/packages/clay-css/src/scss/components/_alerts.scss
+++ b/packages/clay-css/src/scss/components/_alerts.scss
@@ -7,6 +7,7 @@
 
 	display: block;
 	font-size: $alert-font-size;
+	word-wrap: break-word;
 
 	.close {
 		font-size: $alert-close-font-size;
